-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
None
-
macos, arm64
-
15e90d463 (dev), fc6a5401f (6.10), 44240bfe2 (6.9)
The stack is very strange but reproducible, making small changes to structure, that method non-compilable, the destruction way does not crash.
var newWindow = windowComp.createObject(null, {}) // newWindow.show() Qt.callLater(()=>gc()) // does crash when compiled // Qt.callLater(()=>newWindow.destroy()) // does not crash
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 qmllistbug 0x1038a35b8 QQmlPrivate::callArrowFunction(QV4::ExecutionEngine*, QV4::ArrowFunction*, QObject*, void**, int) + 64 1 qmllistbug 0x1038a412c QQmlPrivate::AOTCompiledContext::callObjectPropertyLookup(unsigned int, QObject*, void**, int) const + 832 2 qmllistbug 0x1029a9fa8 QmlCacheGeneratedCode::_qt_qml_main_main1_qml::$_13::__invoke(QQmlPrivate::AOTCompiledContext const*, void**) + 260 3 qmllistbug 0x103871b8c void QV4::coerceAndCall<AOTCompiledMetaMethod, QV4::Moth::VME::exec(QV4::MetaTypesStackFrame*, QV4::ExecutionEngine*)::$_0>(QV4::ExecutionEngine*, AOTCompiledMetaMethod const*, void**, QMetaType const*, int, QV4::Moth::VME::exec(QV4::MetaTypesStackFrame*, QV4::ExecutionEngine*)::$_0) + 2124 4 qmllistbug 0x103871270 QV4::Moth::VME::exec(QV4::MetaTypesStackFrame*, QV4::ExecutionEngine*) + 232 5 qmllistbug 0x1037c62c8 QV4::Function::call(QObject*, void**, QMetaType const*, int, QV4::ExecutionContext*) + 156 6 qmllistbug 0x1039120d4 QQmlJavaScriptExpression::evaluate(void**, QMetaType const*, int) + 316 7 qmllistbug 0x1038baa8c ... 11 qmllistbug 0x1038d64f0 QQmlContextData::emitDestruction() + 52 12 qmllistbug 0x1038e0fe4 QQmlData::setQueuedForDeletion(QObject*) + 88 13 qmllistbug 0x1038e00ec QQmlData::markAsDeleted(QObject*) + 128 14 qmllistbug 0x102dc52f4 QQmlPrivate::QQmlElement<QQuickApplicationWindow>::~QQmlElement() + 20 15 qmllistbug 0x103be8a94 ... 20 qmllistbug 0x103ba9210 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 524
- is duplicated by
-
QTBUG-140074 Crash in QQmlPrivate::callArrowFunctionAsVariant() when using qmlcachegen
-
- Closed
-
- relates to
-
QTBUG-140738 Crash with cachegen compiled code
-
- Closed
-
For Gerrit Dashboard: QTBUG-138516 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
663446,15 | Compiler: Detect calls on partially deleted objects and throw | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
669066,2 | Compiler: Detect calls on partially deleted objects and throw | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
669163,2 | Compiler: Detect calls on partially deleted objects and throw | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |